@@ -206,6 +206,7 @@ namespace QuantLib {
             // Special temporary holiday
             || (d == 17 && m == August && y == 2020)
             || (d == 2 && m == October && y == 2023)
+            || (d == 1 && m == October && y == 2024)
 
             // Harvest Moon Day
             || ((d == 27 || d == 28 || d == 29) && m == September && y == 2004)
